In addImportance, return 50 if average of values equals 0

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
   width: 60%;
   margin: auto;
-  background-color: #4c8527;
+  /* background-color: #4c8527; */
   font-family: 'Hubballi', cursive;
 }
 
