--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ h1 {
   text-align: center;
 }
 
+p {
+  font-size: 20px;
+  text-align: center;
+}
+
 .App {
   background-color: white;
   padding: 1px 20px 20px 20px;
