--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 
 body {
   width: 60%;
   margin: auto;
-  /* background-color: #4c8527; */
-  font-family: 'Hubballi', cursive;
+  font-family: Courier;
 }
 
 h1 {
