--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,103 @@ p {
   margin-bottom: 5px;
 }
 
+/* The input[type=range] styles below are from http://danielstern.ca/range.css/?ref=css-tricks#/ */
+input[type=range] {
+  width: 100%;
+  margin: 19.35px 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  background: #205928;
+  border: 3.1px solid #000000;
+  width: 100%;
+  height: 11.3px;
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  margin-top: -22.45px;
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  border: 3px solid #000000;
+  border-radius: 50px;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #276c30;
+}
+
+input[type=range]::-moz-range-track {
+  background: #205928;
+  border: 3.1px solid #000000;
+  width: 100%;
+  height: 11.3px;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-thumb {
+  width: 40px;
+  height: 40px;
+  background: #ffffff;
+  border: 3px solid #000000;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+  background: transparent;
+  border-color: transparent;
+  border-width: 34.35px 0;
+  color: transparent;
+  width: 100%;
+  height: 11.3px;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: #194620;
+  border: 3.1px solid #000000;
+}
+
+input[type=range]::-ms-fill-upper {
+  background: #205928;
+  border: 3.1px solid #000000;
+}
+
+input[type=range]::-ms-thumb {
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  border: 3px solid #000000;
+  border-radius: 50px;
+  cursor: pointer;
+  margin-top: 0px;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #205928;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #276c30;
+}
+
+@supports (-ms-ime-align:auto) {
+  input[type=range] {
+    margin: 0;
+  }
+}
+
+/* Above is where the styles from http://danielstern.ca/range.css/?ref=css-tricks#/ end */
+
 input[type="text"] {
   padding: 5px;
   font-size: 20px;
